[gd_scene format=3 uid="uid://b76x2ll7qee61"]

[ext_resource type="Script" uid="uid://uyvveax6wfok" path="res://ui/DialogueUI.gd" id="1"]

[node name="DialogueUI" type="CanvasLayer" unique_id=1131186696]
layer = 5
script = ExtResource("1")

[node name="DialogBox" type="TextureRect" parent="." unique_id=594835615]
clip_contents = true
anchors_preset = -1
anchor_left = 0.125
anchor_top = 0.028
anchor_right = 0.875
anchor_bottom = 0.361
offset_left = -7.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 2

[node name="DialogText" type="Label" parent="DialogBox" unique_id=1061758034]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 342.0
offset_top = 53.0
offset_right = -189.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "..."
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="PortraitFrame" type="TextureRect" parent="DialogBox" unique_id=471976255]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 280.0
offset_bottom = 280.0
stretch_mode = 2

[node name="PortraitCharacter" type="TextureRect" parent="DialogBox" unique_id=645200082]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 280.0
offset_bottom = 280.0
stretch_mode = 2

[node name="UIAudio" type="AudioStreamPlayer" parent="." unique_id=556223256]
